# YapBuddy

./: .gitignore  License.txt  README.md  Version-Log.md  YapBuddy.spec  YapBuddySetup.py  Yapbuddy.py  dev_build_setup.spec  file_tree.tree  install_cfg.spec  installforge.ifp  main.py  main.spec  pyproject.toml  req.txt  requirements.txt  res_rc.py  res_rc.qrc  run.py  run.spec  test.py
.github/workflows/: build.yml  main.yml
API/: AI_Model.py  Bot.py
API/res/: Headers.py
Docs/: .tree  Version-Log.md  installation_config.json  wished.tree
Message_Mechanics/: chat.py  functions.py  messages.py
UI/: CustomWidgets.py
UI/Compiled/: MainWindow.py  Message.py
UI/editable/: MainWindow.ui  Message.ui
Utils/: file_handling.py  widgets.py
assets/: instructions.txt
classes/files/: files.py
res/: __init__.py  res.qrc  res_rc.py  res_rc.qrc
res/files/: MainWindow.qss  UserMessage.qss
src/: __init__.py  main.py
src/API/: Bot.py  __init__.py
src/API/res/: Headers.py  __init__.py  instructions.txt
src/Classes/Files/: file_handling.py
src/Classes/GUI/: Messages.py
src/Message_Mechanics/: __init__.py  chat.py  functions.py  messages.py
src/UI/: CustomWidgets.py  MainWindow.py  Message.py  __init__.py
src/UI/Compiled/: MainWindow.py  Message.py  __init__.py
src/UI/editable/: MainWindow.ui  Message.ui
src/Utils/: __init__.py  file_handling.py  widgets.py
src/yapbuddy.egg-info/: SOURCES.txt
stylesheets/: MainWindow.qss
terminal_mechanics/: message_displaying.py  messages.py
test/: file_test.py
test/resources/: doc.txt
