[project]
name = "yapbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "auto-py-to-exe==2.47.0",
    "bottle==0.13.4",
    "bottle-websocket==0.2.9",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "distro==1.9.0",
    "eel==0.18.2",
    "future==1.0.0",
    "gevent==25.8.2",
    "gevent-websocket==0.10.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "jiter==0.10.0",
    "openai==1.99.9",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pycparser==2.23",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyinstaller==6.15.0",
    "pyinstaller-hooks-contrib==2025.8",
    "pyparsing==3.2.3",
    "pyside6==6.9.1",
    "pyside6-addons==6.9.1",
    "pyside6-essentials==6.9.1",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "shiboken6==6.9.1",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "zope-event==5.1.1",
    "zope-interface==7.2",
]
